# qsense

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  pyproject.toml  setup.sh
docs/: 2026-04-09-qsense-cli-design.md  design-rationale.md  development.md  usage.md
scripts/: probe_audio_format.py
skills/qsense/: SKILL.md
skills/qsense/evals/: trigger-tests.md
skills/qsense/references/: install.md  update-check.md  user-notes.md
skills/skill-craft/: SKILL.md
skills/skill-craft/references/: examples.md
skills/skill-craft/scripts/: aggregate_benchmark.py  improve_description.py  run_eval.py  run_loop.py
src/qsense/: __init__.py  __main__.py  _deps.py  _download.py  _extract.py  _util.py  audio.py  cli.py  client.py  config.py  image.py  models.py  registry.yaml  video.py
